--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
-﻿<body leftmargin="150">
-<p align="center">&#65279;<b><font size="7">﻿0001 INTRODUCING YOURSELF</font></b></p>
+﻿
+<head>
+<style type="text/css">
+.auto-style2 {
+	font-size: large;
+}
+.auto-style3 {
+	text-align: center;
+}
+.auto-style4 {
+	text-align: left;
+}
+</style>
+</head>
+
+<body leftmargin="150" style="background-image: url('3.jpg')">
+<p align="center">&#65279;<b><font size="7">﻿<img alt="" height="39" src="1.jpg" width="137"> 0001 INTRODUCING YOURSELF</font></b></p>
+<p align="center">
+<audio controls>
+  <source src="0001.mp3" type="audio/mpeg">Trình duyệt của bạn không hỗ trợ HTML5</audio></p>
 <table cellpadding="0" cellspacing="0" width="957">
 	<!-- MSTableType="layout" -->
 	<tr>
-		<td height="499">
-<audio controls>
-  <source src="https://dryoodas.github.io/0001.mp3" type="audio/mpeg">
-Trình duyệt của bạn không hỗ trợ HTML5
-</audio>
-
-<br><strong>Complete Transcript</strong>
+		<td class="auto-style4" style="height: 492px">
+&nbsp;<br><strong><br>Complete Transcript</strong>
 <br>Welcome to Daily English 1 – Introducing Yourself.
 <br>
 <br>This is Daily English number 1. I’m your host, Dr. Jeff McQuillan, coming to you from the Center for Educational Development in beautiful Los Angeles, California.
@@ -118,7 +131,7 @@ Trình duyệt của bạn không hỗ trợ HTML5
 <br>* What are your happiest childhood memories?
 <br>
 <br>
-<br>for the most part – mainly; in most cases
+		for the most part – mainly; in most cases
 <br>
 <br>* Beatrice arrives to work on time for the most part. The only time she is ever late is when her children are sick.
 <br>
@@ -129,7 +142,6 @@ Trình duyệt của bạn không hỗ trợ HTML5
 <br>grade school – elementary school; a school for the first five to seven years of a child’s education
 <br>
 <br>* Did you learn to read well in grade school?
-<br>
 <br>
 <br>to go on to – to proceed to; to move forward to; to move to the next level
 <br>
@@ -178,7 +190,9 @@ Trình duyệt của bạn không hỗ trợ HTML5
 <br>
 <br>Wear a bicycle “helmet” (hard hat with a strap under the chin) that is “fitted” (sized) properly to protect your “brain” (organ in your head that allows you to think and control your body).
 <br>“Adjust” (make changes to) your bicycle to fit your body. There should be 1 to 2 inches between you and the top “bar” (long hard piece) if using a “road bike” (bicycle intended to be used on streets) and 3 to 4 inches if you are using a “mountain bicycle” (bicycle used for rough paths). The seat should be “level” (having the same height) front to back. The seat height should be adjusted to allow a “slight” (small; little) “bend” (curve) at the knee when the leg is “fully extended” (at full length). The “handlebar” (piece of a bicycle or motorcycle a rider holds) height should be at the same level with the seat.
-<br>Make sure you’re able to see well and others are able to see you. Always wear bright colors when riding day or night. Also wear something that “reflects light” (throws back light), such as reflective “tape” (material that I sticky on one side) or markings, or “flashing” (going on and off repeatedly) lights. Remember, just because you can see a driver doesn’t mean the driver can see you.<br></td>
+<br>Make sure you’re able to see well and others are able to see you. Always wear bright colors when riding day or night. Also wear something that “reflects light” (throws back light), such as reflective “tape” (material that I sticky on one side) or markings, or “flashing” (going on and off repeatedly) lights. Remember, just because you can see a driver doesn’t mean the driver can see you.<br>
+		<strong><br class="auto-style2"></strong><br></td>
 	</tr>
 </table>
+<p class="auto-style3"><strong><span class="auto-style2">_____The end_____</span></strong></p>
 </body>
